[gd_scene load_steps=6 format=3 uid="uid://drnbcjol35a6w"]

[ext_resource type="Script" uid="uid://xpskky06ja4y" path="res://Scripts/main.gd" id="1_jjvhh"]
[ext_resource type="PackedScene" uid="uid://b8p0plxounngf" path="res://Scenes/clock.tscn" id="2_bo1nx"]
[ext_resource type="PackedScene" uid="uid://cnfpl88fjql2s" path="res://Scenes/pause_menu.tscn" id="2_kry3j"]
[ext_resource type="PackedScene" uid="uid://d0svccjkkxd00" path="res://Scenes/debugger.tscn" id="3_8gbba"]
[ext_resource type="PackedScene" uid="uid://dsfk1ciim4bp8" path="res://Scenes/jumpscare.tscn" id="4_jjvhh"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jjvhh")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Clock" parent="UI" instance=ExtResource("2_bo1nx")]
unique_name_in_owner = true

[node name="Debugger" parent="UI" instance=ExtResource("3_8gbba")]
unique_name_in_owner = true
visible = false
z_index = 4000

[node name="QuestionLabel" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_top = 187.0
offset_right = 256.0
offset_bottom = 230.0
grow_horizontal = 2
text = "Question"
horizontal_alignment = 1

[node name="AnswerContainer" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -68.0
offset_right = 150.00061
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="AnswerButton1" type="Button" parent="UI/AnswerContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Answer 1"

[node name="AnswerButton2" type="Button" parent="UI/AnswerContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Answer 2"

[node name="AnswerButton3" type="Button" parent="UI/AnswerContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Answer 3"

[node name="AnswerButton4" type="Button" parent="UI/AnswerContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Answer 4"

[node name="Jumpscare" parent="UI" instance=ExtResource("4_jjvhh")]
unique_name_in_owner = true
visible = false

[node name="PauseLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="PauseLayer" instance=ExtResource("2_kry3j")]
unique_name_in_owner = true
visible = false

[connection signal="hour_changed" from="UI/Clock" to="UI/Debugger" method="on_hour_changed"]
[connection signal="seconds_left_changed" from="UI/Clock" to="UI/Debugger" method="on_seconds_left_changed"]
